--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  <div class="text-box">
     <h1>Theological Institution</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit, <br> Tempore, culpa necessitatibus.</p>
-    <a href="" class="hero-btn">Visit Us To Know More</a>
+    <a href="contact.html" class="hero-btn">Visit Us To Know More</a>
 </div>   
 
 </section>
@@ -158,7 +158,7 @@
 
 <section class="cta">
     <h1>Enroll For Our Various<br>Theological Courses Anywhere</h1>
-    <a href="" class="hero-btn">CONTACT US</a>
+    <a href="contact.html" class="hero-btn">CONTACT US</a>
 </section>
 
 
