--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <div class="about-col">
             <h1>We are a Theological Institution</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde praesentium repellat libero in ullam qui nemo error consequatur, accusantium exercitationem nulla et omnis. Error ex eaque, ipsa ab est dicta!</p>
-            <a href="" class="hero-btn pup-btn">EXPLORE NOW</a>
+            <a href="courses.html" class="hero-btn pup-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
             <img src="./pics/Overcoming common financial problems for college students.jpg">
