--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <section  class="header">
     <nav>
-        <a href="index.html"><img src="pics/logo-removebg-preview.png"></a>
+        <a href="index.html"><img src="../pics/logo-removebg-preview.png"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
             <ul>
@@ -69,19 +69,19 @@
 
     <div class="row">
         <div class="campus-col">
-            <img src="pics/eld1.jpg" alt="eldoret campus">
+            <img src="../pics/eld1.jpg" alt="eldoret campus">
             <div class="layer">
                 <h3>ELDORET</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="pics/ksm1.jpg" alt="kisumu campus">
+            <img src="../pics/ksm1.jpg" alt="kisumu campus">
             <div class="layer">
                 <h3>KISUMU</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="pics/Nairobi City-Jamia mosque view_.jpg" alt="nairobi campus">
+            <img src="../pics/Nairobi City-Jamia mosque view_.jpg" alt="nairobi campus">
             <div class="layer">
                 <h3>NAIROBI</h3>
             </div>
@@ -100,17 +100,17 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="pics/Photo by Polina Zimmerman on Pexels.jpg" alt="library">
+            <img src="../pics/Photo by Polina Zimmerman on Pexels.jpg" alt="library">
             <h3>World Class library</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
         <div class="facilities-col">
-            <img src="pics/class.jpg" alt="class">
+            <img src="../pics/class.jpg" alt="class">
             <h3>World Class library</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
         <div class="facilities-col">
-            <img src="pics/hall.jpg" alt="hall">
+            <img src="../pics/hall.jpg" alt="hall">
             <h3>World Class library</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
@@ -126,7 +126,7 @@
 
     <div class="row">
         <div class="testimonial-col">
-            <img src="pics/Premium Photo _ Front view graduation cap on pile of books.jpg">
+            <img src="../pics/Premium Photo _ Front view graduation cap on pile of books.jpg">
             <div>
                 <p>Students Students Students</p>
                 <h3>Student 1</h3>
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="testimonial-col">
-            <img src="pics/Premium Photo _ Front view graduation cap on pile of books.jpg">
+            <img src="../pics/Premium Photo _ Front view graduation cap on pile of books.jpg">
             <div>
                 <p>Students Students Students</p>
                 <h3>Student 2</h3>
