--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 <section class="blog-content">
     <div class="row">
         <div class="blog-left">
-            <img src="./pics/15 Lessons from Calvin's Biography.jpg">
+            <img src="pics/15 Lessons from Calvin's Biography.jpg">
             <h2>Our Certificate & Degree Programs For 2024</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit, repellat blanditiis ea aut nemo corrupti, quam tempora 
             non obcaecati dolorem praesentium! 
