--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <section  class="header">
     <nav>
-        <a href="index.html"><img src="images/Silhouette Stock Photos and Images - 123RF.jpg"></a>
+        <a href="index.html"><img src="images/logo-removebg-preview.png"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
             <ul>
