--- a/courses.html
+++ b/courses.html
@@ -13,7 +13,7 @@
 <body>
 <section  class="sub-header">
     <nav>
-        <a href="index.html"><img src="./pics/logo-removebg-preview.png"></a>
+        <a href="index.html"><img src="images/logo-removebg-preview.png"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
             <ul>
@@ -61,17 +61,17 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="./pics/Photo by Polina Zimmerman on Pexels.jpg" alt="library">
+            <img src="images/hall.jpg" alt="library">
             <h3>World Class library</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
         <div class="facilities-col">
-            <img src="./pics/class.jpg" alt="class">
+            <img src="images/hall.jpg" alt="class">
             <h3>World Class library</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
         <div class="facilities-col">
-            <img src="./pics/hall.jpg" alt="hall">
+            <img src="images/hall.jpg" alt="hall">
             <h3>World Class library</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
