--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
 <section  class="sub-header">
     <nav>
-        <a href="index.html"><img src="./pics/logo-removebg-preview.png"></a>
+        <a href="index.html"><img src="images/logo-removebg-preview.png"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
             <ul>
@@ -38,7 +38,7 @@
             <a href="courses.html" class="hero-btn pup-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
-            <img src="./pics/Overcoming common financial problems for college students.jpg">
+            <img src="images/15 Lessons from Calvin's Biography.jpg">
         </div>
     </div>
 </section>
