images and colour scheme
Signed-off-by: Jonathan Kyule <jonathankyule2@gmail.com>

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
  
  <div class="text-box">
-    <h1>Theological Institution</h1>
+    <h1>FAITH COLLEGE OF THE BIBLE</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit, <br> Tempore, culpa necessitatibus.</p>
     <a href="contact.html" class="hero-btn">Visit Us To Know More</a>
 </div>   
@@ -64,24 +64,24 @@
 
 
 <section class="campus">
-    <h1>Our Local Campus</h1>
+    <h1>Our Campus</h1>
     <p>Lorem gigifgjfgufh gfgjfghig idhifhgi gi ihgifgjfgjfgjg</p>
 
     <div class="row">
         <div class="campus-col">
-            <img src="images/eld.jpg" alt="eldoret campus">
+            <img src="images/fcb.jpg" alt="eldoret campus">
             <div class="layer">
                 <h3>ELDORET</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="images/ksm.jpg" alt="kisumu campus">
+            <img src="images/ksm (1).jpg" alt="kisumu campus">
             <div class="layer">
                 <h3>KISUMU</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="images/ksm1.jpg" alt="nairobi campus">
+            <img src="images/Nairobi skyline, Kenya (1).jpg" alt="nairobi campus">
             <div class="layer">
                 <h3>NAIROBI</h3>
             </div>
@@ -126,7 +126,7 @@
 
     <div class="row">
         <div class="testimonial-col">
-            <img src="../pics/Premium Photo _ Front view graduation cap on pile of books.jpg">
+            <img src="images/Graduation cap silhouette.jpg">
             <div>
                 <p>Students Students Students</p>
                 <h3>Student 1</h3>
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="testimonial-col">
-            <img src="../pics/Premium Photo _ Front view graduation cap on pile of books.jpg">
+            <img src="images/Graduation cap silhouette.jpg">
             <div>
                 <p>Students Students Students</p>
                 <h3>Student 2</h3>
