--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
-<section  class="sub-header">
+<section  class="sub-header3">
     <nav>
         <a href="index.html"><img src="images/logo-removebg-preview.png"></a>
         <div class="nav-links" id="navLinks">
