--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
-<section  class="sub-header">
+<section  class="sub-header2">
     <nav>
         <a href="index.html"><img src="images/logo-removebg-preview.png"></a>
         <div class="nav-links" id="navLinks">
@@ -62,17 +62,17 @@
     <div class="row">
         <div class="facilities-col">
             <img src="images/hall.jpg" alt="library">
-            <h3>World Class library</h3>
+            <h3>Library</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
         <div class="facilities-col">
             <img src="images/hall.jpg" alt="class">
-            <h3>World Class library</h3>
+            <h3>Classes</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
         <div class="facilities-col">
             <img src="images/hall.jpg" alt="hall">
-            <h3>World Class library</h3>
+            <h3>Hall</h3>
             <p>fdifhdif ofhidhfdi fhoidhfdfydifh ufsdfihfifjd djfidjfhihi hffhigfgi</p>
         </div>
     </div>
