--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <body>
 <section  class="sub-header3">
     <nav>
-        <a href="index.html"><img src="images/logo-removebg-preview.png"></a>
+        <a href="index.html"><img src="images/FCB LOGO.svg"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
             <ul>
